--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@rollup/rollup-darwin-arm64": "^4.34.8",
     "axios": "^1.8.0",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
