--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@rollup/rollup-darwin-arm64": "^4.34.8",
     "axios": "^1.8.0",
+    "chart.js": "^4.4.8",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.15"
   },
