--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-spring": "^9.7.5",
     "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.15"
